Use env vars to secure the Prisma API connections
Signed-off-by: Emanuele Feliziani <feliziani.emanuele@gmail.com>

--- a/server/prisma.yml
+++ b/server/prisma.yml
@@ -1,6 +1,8 @@
 endpoint: https://eu1.prisma.sh/emanuele-28b3be/meal-planner/dev
 datamodel: datamodel.prisma
 
+secret: ${env:PRISMA_SECRET}
+
 generate:
   - generator: javascript-client
     output: ./generated/prisma-client/
