Add initial data for 'days' to seed the Prisma db
Signed-off-by: Emanuele Feliziani <feliziani.emanuele@gmail.com>

--- a/server/prisma.yml
+++ b/server/prisma.yml
@@ -1,5 +1,7 @@
 endpoint: https://eu1.prisma.sh/emanuele-28b3be/meal-planner/dev
 datamodel: datamodel.prisma
+seed:
+  import: seed.zip
 
 secret: ${env:PRISMA_SECRET}
 
